zoom button z-index fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1216,6 +1216,9 @@ select {
 .z-30 {
 	z-index: 30;
 }
+.z-20 {
+	z-index: 20;
+}
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
